@@ -2,7 +2,9 @@ Release Notes - Mesos/ClusterD
 -------------------------------------------
 This master branch contains the following changes:
 
-  * Docker Containerize now supports CNI.
+  * Docker Containerizer now supports CNI.
+  * Docker Containerizer now supports CGroupsV2. It will be enabled by the Mesos Agent flag "--enable_cgroupv2". This will
+  break the mesos containerizer.
 
 
 Release Notes - Mesos - Version 1.11.0
